<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.test.TestFragment">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/bacTrackDevice"/>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TableRow android:background="#0079D6" android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/description" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/value" />
        </TableRow>

        <TableRow android:background="#DAE8FC" android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/serial" />
            <TextView
                android:id="@+id/serialTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"/>
        </TableRow>
        <TableRow android:background="#DAE8FC" android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/use_count" />
            <TextView
                android:id="@+id/useTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"/>
        </TableRow>
        <TableRow android:background="#DAE8FC" android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/battery_status" />
            <TextView
                android:id="@+id/batteryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/testButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/circle"
        android:drawableTop="@drawable/breathalyzer_small"
        android:paddingTop="40dp"
        android:layout_centerInParent="true"
        android:foregroundTint="@color/black"
        android:elevation="10dp"
        android:text="@string/take_test"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/message"
        android:layout_below="@id/testButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textSize="22sp"
        android:visibility="gone"
        android:text="@string/get_ready_to_blow_in_12_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:visibility="gone"
        android:layout_marginTop="40dp"
        android:textStyle="bold|italic"
        android:layout_below="@id/message"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/disconnect"
        android:text="DISCONNECT"
        android:textColor="#fff"
        android:backgroundTint="@color/purple_500"
        android:layout_margin="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>