<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.kai.breathalyzer.ui.home.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_testFragment"
            app:destination="@id/resultFragment" />
        <action
            android:id="@+id/action_homeFragment_to_graphFragment"
            app:destination="@id/graphFragment" />

        <action
            android:id="@+id/action_HomeFragment_to_ProfileFragment"
            app:destination="@id/nav_profile" />

        <action
            android:id="@+id/action_HomeFragment_to_LoginFragment"
            app:destination="@id/nav_login" />
    </fragment>

    <fragment
        android:id="@+id/resultFragment"
        android:name="com.kai.breathalyzer.ui.test.TestFragment"
        android:label="fragment_test"
        tools:layout="@layout/fragment_test" >
    </fragment>
    <fragment
        android:id="@+id/graphFragment"
        android:name="com.kai.breathalyzer.ui.results.GraphFragment"
        android:label="fragment_graph"
        tools:layout="@layout/fragment_graph" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.kai.breathalyzer.ui.login.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_RegisterFragment"
            app:destination="@id/nav_register" />
        <action
            android:id="@+id/action_LoginFragment_to_HomeFragment"
            app:destination="@+id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_register"
        android:name="com.kai.breathalyzer.ui.registration.RegistrationFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_registration" >
        <action
            android:id="@+id/action_RegisterFragment_to_LoginFragment"
            app:destination="@id/nav_login" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.kai.breathalyzer.ui.profile.ProfileFragment"
        android:label="@string/profile_fragment_label"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_ProfileFragment_to_LoginFragment"
            app:destination="@id/nav_login" />
        <action
            android:id="@+id/action_ProfileFragment_to_HomeFragment"
            app:destination="@+id/homeFragment" />
    </fragment>

</navigation>